# legal_services

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
legal_services/: admin.py  apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
legal_services/migrations/: 0001_initial.py  0002_legislation.py  0003_alter_legislation_image.py
legal_services/templates/legal_services/: about.html  base.html  blog-details.html  consultation.html  contact.html  home.html  individuals.html  legal.html  legislation.html  privacy-policy.html  thank_you.html
legal_services/templates/legal_services/include/: footer.html  inc_menu.html
nginx/: Dockerfile  nginx.conf
ssl/: certificate.crt  private.key
static/assets/css/: responsive.css  responsive.css.map  responsive.scss  rtl.css  style.css  style.scss
static/assets/js/: custom.js
staticfiles/css/: main.css  styles.css
staticfiles/js/: custom-scripts.js
